# detypstify

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  flake.nix  index.html  justfile  pyproject.toml  python.flakeModule.nix  rust-toolchain.toml  rust.flakeModule.nix
.cargo/: config.toml
.github/: dependabot.yml  patch
.github/workflows/: build.yml  ci.yml  fmt.yml  lint.yml  update-flake-lock.yml  web-app.yml
app/: Cargo.toml  Dioxus.toml  build.rs  index.html  justfile  rust-toolchain.toml
app/.cargo/: config.toml
app/assets/: main.css
app/public/: main.css.br  tailwind.css  tailwind.css.br
app/src/: frontend.rs  inference.rs  main.rs  typst.rs  typst_execute.rs
apps/web-dioxus/: Cargo.toml  Dioxus.toml  build.rs
apps/web-dioxus/public/: tailwind.css
apps/web-dioxus/src/: frontend.rs  inference.rs  main.rs
assets/dioxus/: detypstify.js  detypstify.js.br
assets/dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js  inline0.js.br
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/dataset/: Cargo.toml
handwriting_training/: Cargo.toml
handwriting_training/src/: main.rs
paper/: flakeModule.nix  main.bib  main.typ  neurips2023.typ  typst.toml
recognize/: Cargo.toml
recognize/src/: lib.rs
scraper/: Cargo.toml  process.sh
scraper/src/: main.rs
scripts/: filter_formulas.sh  mk_formulas_oneline.sh  mk_formulas_txt.sh  resize_imgs.py  train_val_split.py
symbols2svg/: __init__.py  gen_files.py  symbols.txt
train/: __init__.py  check_data.py  dataset.py  eval.py  main.py  model.py  rocm.py  train.py  val_split.py
webapp/: index.html  script.ts
webapp-2_0/: Cargo.toml  build.rs
webapp-2_0/src/: lib.rs
webapp-2_0/src/model/: mod.rs
writeup/: main.bib  main.typ  neurips2023.typ
