[package]
name = "app"
version = "0.1.0"
authors = ["Jachym Putta <jachym.putta@yale.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
burn = { git = "https://github.com/DieracDelta/burn.git", branch = "jr/fix_default", features = ["ndarray"], default-features=false }
burn-wgpu = { git = "https://github.com/DieracDelta/burn.git", branch = "jr/fix_default", default-features = false}
burn-candle = { git = "https://github.com/DieracDelta/burn.git", branch = "jr/fix_default", default-features = false}
image = "0.25.1"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"

# deps to compile typst to image to display
# TODO we may want to hide these behind a feature flag eventually
typst = "0.11.1"
typst-pdf = "0.11.1"
typst-svg = "0.11.1"
comemo = "0.4.0"
zune-inflate = {version = "0.2.54", default_features = false, features = ["gzip", "std"]}
tar = "0.4"
time = "0.3.36"
ttf-parser = "0.21.1"
typst-assets = {version = "0.11.1", features = ["fonts"]}

# sanity check
wasm-bindgen-rayon = "1.2.1"
rayon = "1.10.0"


[build-dependencies]
burn-import = "0.13.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'BlobPropertyBag',
  'Url',
]
