[package]
name = "app"
version = "0.1.0"
authors = ["Jachym Putta <jachym.putta@yale.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["web"] }
burn = { git = "https://github.com/tracel-ai/burn.git", branch = "main", features = ["ndarray"], default-features=false }
burn-wgpu = { git = "https://github.com/tracel-ai/burn.git", branch = "main", default-features = false}
burn-candle = { git = "https://github.com/tracel-ai/burn.git", branch = "main", default-features = false}
image = "0.25.1"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn.git", branch = "main", default-features = false, features = ["onnx"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData'
]
