[package]
name = "webapp-2_0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13.0", features = ["ndarray", "dataset", "vision"] }

[build-dependencies]
burn-import = "0.13.0"

